--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="choise-container">
         <div class="choise">
           <h2 class="text">Player:</h2>
-          <h1 id="playerChoise" class="text"></h1>
+          <h2 id="playerChoise" class="text"></h2>
         </div>
         <div class="choise">
           <h2 class="text">Computer:</h2>
-          <h1 id="computerChoise" class="text"></h1>
+          <h2 id="computerChoise" class="text"></h2>
         </div>
       </div>
       <p id="result" class="text">Choose your move:</p>
@@ -36,7 +36,10 @@
       <button id="reset-btn" class="btn" onclick="resetGame()">
         Reset Game
       </button>
-      <div id="score" class="text">Player: 0 | Computer: 0</div>
+      <div id="score" class="scores">
+        <p class="score">0<br />Player</p>
+        <p class="score">0<br />Computer</p>
+      </div>
     </div>
 
     <script src="./script.js"></script>
